--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "reactjs-tabbedpane-component",
+  "name": "labfive",
   "version": "1.0.19",
   "description": "A tabbed pane component using React.js",
   "author": "adafycheng",
   "license": "MIT",
-  "repository": "adafycheng/reactjs-tabbedpane-component",
+  "repository": "https://github.com/rohithYerraguntA/labfive/",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "lint": "eslint 'src/**/*.js?(x)'",
+    "lint": "eslint 'src//*.js?(x)'",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
