--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "labfive",
+  "name": "lab",
   "version": "1.0.19",
   "description": "A tabbed pane component using React.js",
   "author": "adafycheng",
   "license": "MIT",
-  "repository": "https://github.com/rohithYerraguntA/labfive/",
+  "repository": "https://github.com/rohithYerraguntA/lab/",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
